--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
-  <a href="https://www.google.com/search?q=aj&rlz=1C5CHFA_enGB745GB745&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjtjqSE8Y_kAhVH_KQKHe-cD9sQ_AUIESgB&biw=1440&bih=743#imgrc=1FMViUiKDniGKM:"
-  Absolute Path (external link)
+  <a href="https://www.google.com/search?q=aj&rlz=1C5CHFA_enGB745GB745&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjtjqSE8Y_kAhVH_KQKHe-cD9sQ_AUIESgB&biw=1440&bih=743#imgrc=1FMViUiKDniGKM:">Absolute Path (external link)</a>
+  
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   Relative Path (internal link)
