Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <a href="about.html">Relative Path (internal link)</a>
   
 
-  <a href=""
+  <a href="https://www.google.com/search?q=aj&rlz=1C5CHFA_enGB745GB745&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjtjqSE8Y_kAhVH_KQKHe-cD9sQ_AUIESgB&biw=1440&bih=743#imgrc=1FMViUiKDniGKM:" target="_blank"
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
 
 </body>
